<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FormActivity">

        <TextView
            android:id="@+id/textview_form_tanggal_peminjaman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tanggal_peminjaman"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_form_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/nama"
            app:layout_constraintStart_toStartOf="parent"
            android:textCursorDrawable="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@+id/edittext_form_tanggal_peminjaman" />

        <TextView
            android:id="@+id/textview_form_jumlah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/jumlah"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_form_nama" />

        <TextView
            android:id="@+id/textview_form_jatuh_tempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/jatuh_tempo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_form_phone" />

        <TextView
            android:id="@+id/textview_form_keterangan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/keterangan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_form_jatuh_tempo" />

        <TextView
            android:id="@+id/textview_form_hapus_jatuh_tempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:clickable="true"
            android:padding="8dp"
            android:text="@string/tombol_hapus_jatuh_tempo"
            android:textColor="@color/colorRed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_form_phone" />

        <TextView
            android:id="@+id/textview_form_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_form_jumlah" />

        <EditText
            android:id="@+id/edittext_form_tanggal_peminjaman"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_date_range_24dp"
            android:drawablePadding="8dp"
            android:ems="10"
            android:focusable="false"
            android:inputType="date"
            android:textColorHighlight="#3E0F4D"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_form_tanggal_peminjaman" />

        <EditText
            android:id="@+id/edittext_form_nama"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:drawableLeft="@drawable/ic_person_24dp"
            android:drawablePadding="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColorLink="#3E0F4D"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_form_nama" />

        <EditText
            android:id="@+id/edittext_form_jumlah"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_form_jumlah" />

        <EditText
            android:id="@+id/editText_form_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/opsional"
            android:inputType="phone"
            android:focusable="true"
            app:layout_constraintEnd_toStartOf="@+id/imageView_form_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_form_phone" />

        <EditText
            android:id="@+id/edittext_form_jatuh_tempo"
            android:hint="@string/opsional"
            android:drawableLeft="@drawable/ic_date_range_24dp"
            android:drawablePadding="8dp"
            android:clickable="true"
            android:focusable="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_form_jatuh_tempo" />

        <EditText
            android:id="@+id/edittext_form_keterangan"
            android:drawableLeft="@drawable/ic_comment_24dp"
            android:drawablePadding="8dp"
            android:hint="@string/opsional"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_form_keterangan" />

        <ImageView
            android:id="@+id/imageView_form_phone"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:clickable="true"
            android:src="@drawable/ic_contacts_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_form_phone" />

        <RadioGroup
            android:id="@+id/radiogroup_form_utang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_form_keterangan">

            <RadioButton
                android:id="@+id/radiobutton_form_dipinjam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/dipinjam"
                android:clickable="true"
                android:textColorHighlight="#3E0F4D"
                android:textColorLink="#3E0F4D"
                android:textCursorDrawable="@color/colorPrimaryDark" />

            <RadioButton
                android:id="@+id/radioButton_form_meminjam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/meminjam"
                android:clickable="true"
                android:textColorHighlight="#3E0F4D"
                android:textColorLink="#3E0F4D"
                android:textCursorDrawable="@color/colorPrimaryDark" />
        </RadioGroup>

        <Button
            android:id="@+id/button_form_tambah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/tombol_tambah"
            android:textColor="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radiogroup_form_utang" />

        <Button
            android:id="@+id/button_form_hapus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/tombol_hapus"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toStartOf="@+id/button_form_perbaruhi"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radiogroup_form_utang" />

        <Button
            android:id="@+id/button_form_perbaruhi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/tombol_perbaruhi"
            android:textColor="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_form_hapus"
            app:layout_constraintTop_toBottomOf="@+id/radiogroup_form_utang" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>