...
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicatorColor="@color/colorPrimaryDark"
        tools:layout_editor_absoluteX="8dp"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager_main_utang"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tablayout_main_utang"/>
...
            app:fabCradleRoundedCornerRadius="100dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            app:navigationIcon="@drawable/ic_home_24dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingbutton_main_utang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_24dp"
            android:backgroundTint="@color/colorPrimaryDark"
            app:layout_anchor="@id/bottom_app_bar"/>

...
