<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_history"
        android:title="History"
        android:icon="@drawable/ic_history_24dp"
        app:showAsAction="always"/>
</menu>